Build collaborative filtering system

--- a/wrangling.ipynb
+++ b/wrangling.ipynb
@@ -32,8 +32,10 @@
    "outputs": [],
    "source": [
     "# Read in the MovieTweetings dataset originally taken from https://github.com/sidooms/MovieTweetings/tree/master/latest\n",
-    "movies = pd.read_csv('data/movies.dat', delimiter='::', header=None, names=['movie_id', 'movie', 'genre'], dtype={'movie_id': object}, engine='python')\n",
-    "reviews = pd.read_csv('data/ratings.dat', delimiter='::', header=None, names=['user_id', 'movie_id', 'rating', 'timestamp'], dtype={'movie_id': object, 'user_id': object, 'timestamp': object}, engine='python')"
+    "movies = pd.read_csv('data/movies.dat', delimiter='::', header=None, names=[\n",
+    "                     'movie_id', 'movie', 'genre'], dtype={'movie_id': object}, engine='python')\n",
+    "reviews = pd.read_csv('data/ratings.dat', delimiter='::', header=None, names=['user_id', 'movie_id', 'rating', 'timestamp'], dtype={\n",
+    "                      'movie_id': object, 'user_id': object, 'timestamp': object}, engine='python')"
    ]
   },
   {
@@ -350,7 +352,8 @@
    ],
    "source": [
     "# make a new column with movie year\n",
-    "movies['date'] = movies['movie'].str.split('(', expand= True)[1].str.replace(')','')"
+    "movies['date'] = movies['movie'].str.split(\n",
+    "    '(', expand=True)[1].str.replace(')', '')"
    ]
   },
   {
@@ -457,7 +460,7 @@
     "        genres.extend(genre)\n",
     "    except:\n",
     "        pass\n",
-    "    \n",
+    "\n",
     "genres = set(genres)"
    ]
   },
@@ -846,7 +849,7 @@
    "outputs": [],
    "source": [
     "# create month column to get dummies from\n",
-    "reviews['month'] = reviews['date'].apply(lambda t:t.month)"
+    "reviews['month'] = reviews['date'].apply(lambda t: t.month)"
    ]
   },
   {
@@ -856,7 +859,8 @@
    "outputs": [],
    "source": [
     "# get month dummies\n",
-    "reviews = pd.concat([reviews, pd.get_dummies(reviews['month'], prefix='month')], axis=1)"
+    "reviews = pd.concat([reviews, pd.get_dummies(\n",
+    "    reviews['month'], prefix='month')], axis=1)"
    ]
   },
   {
@@ -866,7 +870,7 @@
    "outputs": [],
    "source": [
     "# create year column to get dummies from\n",
-    "reviews['year'] = reviews['date'].apply(lambda t:t.year)"
+    "reviews['year'] = reviews['date'].apply(lambda t: t.year)"
    ]
   },
   {
@@ -876,7 +880,8 @@
    "outputs": [],
    "source": [
     "# get year dummies\n",
-    "reviews = pd.concat([reviews, pd.get_dummies(reviews['year'], prefix='year')], axis=1)"
+    "reviews = pd.concat([reviews, pd.get_dummies(\n",
+    "    reviews['year'], prefix='year')], axis=1)"
    ]
   },
   {
@@ -1109,13 +1114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load into CSV\n",
-    "movies.to_csv('data/movies.csv', index=False);\n",
-    "reviews.to_csv('data/reviews.csv', index=False);"
+    "movies.to_csv('data/movies_clean.csv', index=False)\n",
+    "reviews.to_csv('data/reviews_clean.csv', index=False)"
    ]
   }
  ],
