--- a/knowledge_based.ipynb
+++ b/knowledge_based.ipynb
@@ -209,7 +209,7 @@
     "    ranked_movies - a pandas dataframe of the already ranked movies based on avg rating, count, and time\n",
     "    years - a list of strings with years of movies\n",
     "    genres - a list of strings with genres of movies\n",
-    "    \n",
+    "\n",
     "    OUTPUT:\n",
     "    top_movies - a list of the n_top recommended movies by movie title in order best to worst\n",
     "    '''\n",
@@ -261,7 +261,8 @@
     }
    ],
    "source": [
-    "filtered_recommendations('1', 20, ranked_movies, years=[2015, 2016, 2017, 2018], genres=['History'])"
+    "filtered_recommendations('1', 20, ranked_movies, years=[\n",
+    "                         2015, 2016, 2017, 2018], genres=['History'])"
    ]
   }
  ],
