Build content based recommendation system

--- a/collaborative_filtering.ipynb
+++ b/collaborative_filtering.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>user_id</th>\n",
        "      <th>movie_id</th>\n",
        "      <th>rating</th>\n",
@@ -62,6 +61,7 @@
        "      <th>month_2</th>\n",
        "      <th>month_3</th>\n",
        "      <th>month_4</th>\n",
+       "      <th>month_5</th>\n",
        "      <th>...</th>\n",
        "      <th>month_9</th>\n",
        "      <th>month_10</th>\n",
@@ -78,12 +78,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>68646</td>\n",
        "      <td>10</td>\n",
        "      <td>1381620027</td>\n",
        "      <td>2013-10-12 23:20:27</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -103,11 +103,11 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>113277</td>\n",
        "      <td>10</td>\n",
        "      <td>1379466669</td>\n",
        "      <td>2013-09-18 01:11:09</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -127,11 +127,11 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "      <td>422720</td>\n",
        "      <td>8</td>\n",
        "      <td>1412178746</td>\n",
        "      <td>2014-10-01 15:52:26</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -150,12 +150,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>454876</td>\n",
        "      <td>8</td>\n",
        "      <td>1394818630</td>\n",
        "      <td>2014-03-14 17:37:10</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -174,12 +174,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>2</td>\n",
        "      <td>790636</td>\n",
        "      <td>7</td>\n",
        "      <td>1389963947</td>\n",
        "      <td>2014-01-17 13:05:47</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -198,18 +198,18 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 24 columns</p>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  user_id  movie_id  rating   timestamp                 date  \\\n",
-       "0           0        1     68646      10  1381620027  2013-10-12 23:20:27   \n",
-       "1           1        1    113277      10  1379466669  2013-09-18 01:11:09   \n",
-       "2           2        2    422720       8  1412178746  2014-10-01 15:52:26   \n",
-       "3           3        2    454876       8  1394818630  2014-03-14 17:37:10   \n",
-       "4           4        2    790636       7  1389963947  2014-01-17 13:05:47   \n",
+       "   user_id  movie_id  rating   timestamp                 date  month_1  \\\n",
+       "0        1     68646      10  1381620027  2013-10-12 23:20:27        0   \n",
+       "1        1    113277      10  1379466669  2013-09-18 01:11:09        0   \n",
+       "2        2    422720       8  1412178746  2014-10-01 15:52:26        0   \n",
+       "3        2    454876       8  1394818630  2014-03-14 17:37:10        0   \n",
+       "4        2    790636       7  1389963947  2014-01-17 13:05:47        0   \n",
        "\n",
-       "   month_1  month_2  month_3  month_4  ...  month_9  month_10  month_11  \\\n",
+       "   month_2  month_3  month_4  month_5  ...  month_9  month_10  month_11  \\\n",
        "0        0        0        0        0  ...        0         1         0   \n",
        "1        0        0        0        0  ...        0         0         0   \n",
        "2        0        0        0        0  ...        0         1         0   \n",
@@ -223,10 +223,10 @@
        "3         0          0          1          0          0          0          0  \n",
        "4         0          0          1          0          0          0          0  \n",
        "\n",
-       "[5 rows x 24 columns]"
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,6 +244,8 @@
     "# Read in the datasets\n",
     "movies = pd.read_csv('data/movies_clean.csv')\n",
     "reviews = pd.read_csv('data/reviews_clean.csv')\n",
+    "del movies['Unnamed: 0']\n",
+    "del reviews['Unnamed: 0']\n",
     "\n",
     "reviews.head()"
    ]
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +390,7 @@
        "4        2    790636       7"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +595,7 @@
        "array([ 454876,  816711, 1454468, 1535109], dtype=int64)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +683,7 @@
        "1535109   8.0  9.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
